# midaspy

./: .gitignore  .travis.yml  LICENSE.txt  README.md  mix.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
examples/: ADS.csv  CPIAUCSL.csv  DFF_2_Vintages_Starting_2009_09_28.txt  GDP.csv  MIDASExamples.ipynb  USREC.csv  Weights.ipynb  cpi-fed.csv  gdp-pay.csv  usbcind.csv
midas/: adl.py  fit.py  forecast.py  midas.py  mix.py  regression.py  weights.py
tests/: conftest.py  test_forecast.py  test_midas.py  test_mix.py  test_weights.py
tests/data/: gdp.csv  pay.csv
