[tool.poetry]
name = "midaspy"
version = "0.1.0"
description = "Python version of Mixed Data Sampling (MIDAS) regression"
authors = ["Mike Mull <mike.mull@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
